Fisicas avanzadas completas

--- a/Prácticas/Blockout.html
+++ b/Prácticas/Blockout.html
@@ -210,16 +210,20 @@
             var keyCode = event.which;
             // Mover la base a la izquierda si se presiona la tecla de flecha izquierda
             if ( keyCode == 37 && base.position.x > -9.5) {
-                base.position.x -= 0.52;
+                base.position.x -= 1.2;
             }
             // Mover la base a la derecha si se presiona la tecla de flecha derecha
             else if ( keyCode == 39 && base.position.x < 9.5) {
-                base.position.x += 0.52;
+                base.position.x += 1.2;
             }
         }
 
         function checkCollision(sphere, borders) {
             var originPosition = sphere.position.clone();
+            var positionBreak = 2;
+            var positionHit;
+            speed = 0.25;
+
 
             const positionAttribute = sphere.geometry.getAttribute( 'position' );
             const localVertex = new THREE.Vector3();
@@ -236,128 +240,301 @@
                     stepX *= -1;
                     audio.play();
                     }
-                    if (collisionResults[0].object.name == "base" || collisionResults[0].object.name == "top") {
+                    if (collisionResults[0].object.name == "top") {
                     stepY *= -1;
                     audio.play();
                     } 
+
+                    if (collisionResults[0].object.name == "base") {
+
+                        /* Velocidad variable */
+
+                        positionBreak = Math.abs(positionBreak) + 50;
+                        positionHit = Math.abs(base.position.x) + 50;
+                        console.log(Math.abs(positionHit - positionBreak))
+                        speed = Math.abs(positionHit - positionBreak) * 0.01 + 0.23;
+
+                        // Calcular la posición relativa de la colisión
+                        var collisionPoint = collisionResults[0].point;
+                        var relativeCollisionPoint = collisionPoint.clone().sub(base.position);
+                        console.log(relativeCollisionPoint)
+
+                        // Obtener el valor absoluto de la posición relativa en x de la colisión
+                        var relativeCollisionX = relativeCollisionPoint.x;
+
+                        // Calcular el ángulo de rebote en base a la posición de la colisión
+                        var angle = Math.atan2(relativeCollisionPoint.y, relativeCollisionPoint.x);
+
+                        // Calcular el nuevo ángulo de rebote
+                        var reflectionAngle =  Math.abs(angle) - Math.PI;
+
+                        if (stepX == 0) {
+                                if (relativeCollisionPoint.x < 0) {
+                                stepX = Math.cos(reflectionAngle) * speed;
+                                stepY = -Math.sin(reflectionAngle) * speed;
+                            } else {
+                                stepX = Math.cos(reflectionAngle) * speed;
+                                stepY = -Math.sin(reflectionAngle) * speed;
+                            }
+                        } else if (stepX < 0) {
+                                if (relativeCollisionPoint.x < 0) {
+                                stepX = -Math.cos(reflectionAngle) * speed;
+                                stepY = -Math.sin(reflectionAngle) * speed;
+                            } else {
+                                stepX = Math.cos(reflectionAngle) * speed;
+                                stepY = -Math.sin(reflectionAngle) * speed;
+                            } 
+                        } else {
+                                if (relativeCollisionPoint.x < 0) {
+                                stepX = Math.cos(reflectionAngle) * speed;
+                                stepY = -Math.sin(reflectionAngle) * speed;
+                            } else {
+                                stepX = -Math.cos(reflectionAngle) * speed;
+                                stepY = -Math.sin(reflectionAngle) * speed;
+                            }
+                        }
+
+                        audio.play();
+                    }
+
                     if (collisionResults[0].object.name == "obj00") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(4,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj01") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(5,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj02") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(6,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj03") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(7,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj10") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(8,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj11") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(9,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj12") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(10,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj13") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(11,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj20") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(12,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj21") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(13,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj22") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(14,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj23") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(15,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj30") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(16,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj31") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(17,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj32") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(18,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj33") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(19,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj40") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(20,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj41") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(21,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj42") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(22,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     if (collisionResults[0].object.name == "obj43") {
-                    stepY *= -1;
+                        var collisionPoint = collisionResults[0].point;
+                        if(collisionPoint.x < sphere.position.x || collisionPoint.x > sphere.position.x) {
+                            stepX *= -1
+                        } else {
+                            stepY *= -1;
+                        }
                     scene.remove(collisionResults[0].object)
                     borders.splice(23,1,change)
+                    positionBreak = base.position.x;
                     audio.play();
                     } 
                     break;
@@ -404,8 +581,8 @@
         // Añade el objeto THREE.PositionalAudio a la escena como un hijo del objeto que va a colisionar
         scene.add(audio);
 
-        var stepX = 0.25;
-        var stepY = 0.17;  
+        var stepX = 0;
+        var stepY = -0.15;  
     
         /* Funcion de inicio */
         function init() {
